# percpu

./: CHANGELOG.md  Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: check.yml  ci.yml  deploy.yml  test.yml
docs/plans/: 2026-03-06-feature-modes-design.md  2026-03-06-implementation-plan.md  2026-03-08-mode-refactoring-design.md  2026-03-08-mode-refactoring-impl.md  2026-03-08-simplify-mode-design.md  2026-03-08-simplify-mode-impl.md
percpu/: Cargo.toml  all.html  attr.def_percpu.html  build.rs  fn.get_local_thread_pointer.html  fn.init.html  fn.init_percpu_reg.html  fn.percpu_area_base.html  fn.percpu_area_num.html  fn.percpu_area_size.html  fn.read_percpu_reg.html  fn.set_local_thread_pointer.html  fn.write_percpu_reg.html  index.html  sidebar-items.js  static.EXAMPLE_PERCPU_DATA.html  struct.EXAMPLE_PERCPU_DATA_WRAPPER.html  test_percpu.x  test_percpu_custom.x
percpu/examples/: test_percpu.rs
percpu/imp/: fn.init_percpu_reg.html  fn.percpu_area_num.html  fn.read_percpu_reg.html  fn.write_percpu_reg.html
percpu/src/: imp.rs  init_error.rs  lib.rs  naive.rs
percpu/src/custom/: mod.rs  tp.rs
percpu/tests/: test_percpu.rs
percpu_macros/: Cargo.toml  all.html  attr.def_percpu.html  index.html
percpu_macros/src/: arch.rs  lib.rs  naive.rs
search.desc/percpu/: percpu-desc-0-.js
search.desc/percpu_macros/: percpu_macros-desc-0-.js
src/percpu/: imp.rs.html  lib.rs.html
src/percpu_macros/: arch.rs.html  lib.rs.html
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
