[workspace]
resolver = "2"

members = [
    "percpu",
    "percpu_macros",
]

[workspace.package]
version = "0.1.3"
authors = ["Yuekai Jia <equation618@gmail.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
documentation = "https://arceos-org.github.io/percpu"
repository = "https://github.com/arceos-org/percpu"
keywords = ["arceos", "percpu"]
categories = ["development-tools::procedural-macro-helpers", "no-std"]
