[package]
name = "percpu"
version = "0.1.2"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Define and access per-CPU data structures"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/percpu"
documentation = "https://docs.rs/percpu"
keywords = ["arceos", "percpu"]
categories = ["development-tools::procedural-macro-helpers", "no-std"]

[features]
# For single CPU use, just make the per-CPU data a global variable.
sp-naive = ["percpu_macros/sp-naive"]

# Whether the system enables preemption.
preempt = ["percpu_macros/preempt", "dep:kernel_guard"]

default = []

# ARM specific, whether to run at the EL2 privilege level.
arm-el2 = []

[dependencies]
cfg-if = "1.0"
kernel_guard = { version = "0.1", optional = true }
percpu_macros = { path = "../percpu_macros", version = "0.1" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"

[target.'cfg(not(target_os = "none"))'.dependencies]
spin = "0.9"
