[package]
name = "percpu_macros"
version = "0.1.2"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Macros to define and access a per-CPU data structure"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/percpu"
documentation = "https://docs.rs/percpu_macros"
keywords = ["arceos", "percpu"]
categories = ["development-tools::procedural-macro-helpers", "no-std"]

[features]
# For single CPU use, just make the per-CPU data a global variable.
sp-naive = []

# Whether the system enables preemption.
preempt = []

default = []

# ARM specific, whether to run at the EL2 privilege level.
arm-el2 = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true
