[package]
name = "percpu_macros"
description = "Macros to define and access a per-CPU data structure"
documentation = "https://docs.rs/percpu_macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
default = []

# For single CPU use, just make the per-CPU data a global variable.
sp-naive = []

# Whether the system enables preemption.
preempt = []

# ARM specific, whether to run at the EL2 privilege level.
arm-el2 = []

# Allow using non-zero VMA addresses for `.percpu` section. Required for testing
# on Linux user-space. May reduce performance slightly.
non-zero-vma = []

[dependencies]
cfg-if = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true
